syntax = "proto3";

package ai.lzy.v1;

import "ai/lzy/v1/common/env.proto";
import "ai/lzy/v1/common/slot.proto";

option java_outer_classname = "LMO";
option java_package = "ai.lzy.v1.common";

message Operation {
  EnvSpec env = 1;
  Requirements requirements = 2;
  string command = 3;
  repeated SlotSpec slots = 4;
  string description = 5;
  string name = 6;

  // Std slots for stderr and stdout. Optional
  SlotSpec stdout = 7;
  SlotSpec stderr = 8;
}

message Requirements {
  string poolLabel = 1;
  string zone = 2;
}
